--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ activity = "1.9.3"
 constraintlayout = "2.1.4"
 gson = "2.11.0"
 viewModelScope = "2.8.6"
+navigation = "2.8.3"
+glide = "4.15.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -25,10 +27,18 @@ androidx-constraintlayout = { group = "androidx.constraintlayout", name = "const
 gson-serializable = { group = "com.google.code.gson", name ="gson", version.ref = "gson"}
 viewModelScope = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "viewModelScope"}
 
+navigation-ui = {group = "androidx.navigation", name = "navigation-ui", version.ref = "navigation"}
+navigation-fragment = {group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigation"}
+navigation-fragment-ktx = {group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation"}
+
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide"}
 
 
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+navigation_safeargs-kotlin = { id="androidx.navigation.safeargs.kotlin", version.ref="navigation"}
+
+
 
