--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,10 +9,14 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.1.4"
+
 gson = "2.11.0"
+retrofit = "2.11.0"
+mockito = "5.11.0"
+glide ="4.16.0"
 viewModelScope = "2.8.6"
-navigation = "2.8.3"
-glide = "4.15.1"
+navigationComponent = "2.7.1"
+ktor = "3.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -24,21 +28,22 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 
-gson-serializable = { group = "com.google.code.gson", name ="gson", version.ref = "gson"}
-viewModelScope = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "viewModelScope"}
 
-navigation-ui = {group = "androidx.navigation", name = "navigation-ui", version.ref = "navigation"}
-navigation-fragment = {group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigation"}
-navigation-fragment-ktx = {group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation"}
-
-glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide"}
-
+gson-serializer = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+retrofit-converter = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
+mockito-framework = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
+mockito-junit = { group = "org.mockito", name = "mockito-junit-jupiter", version.ref = "mockito" }
+glide = { group ="com.github.bumptech.glide", name ="glide", version.ref="glide"}
+viewmodel-scope = { group ="androidx.lifecycle", name ="lifecycle-viewmodel-ktx", version.ref="viewModelScope"}
+nav-ui = { group ="androidx.navigation", name ="navigation-ui", version.ref="navigationComponent"}
+nav-fragment = { group ="androidx.navigation", name ="navigation-fragment", version.ref="navigationComponent"}
+nav-fragment-ktx = { group ="androidx.navigation", name="navigation-fragment-ktx", version.ref ="navigationComponent"}
 
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-navigation_safeargs-kotlin = { id="androidx.navigation.safeargs.kotlin", version.ref="navigation"}
-
+navigation-safeargs-kotlin = { id="androidx.navigation.safeargs.kotlin", version.ref="navigationComponent"}
 
 
